# pureikyubu

./: .gitignore  .gitmodules  Bootstrap_Reversing.md  CMakeLists.txt  Dolwin.cww  Dolwin.dsp  Dolwin.mcp  Dolwin.sln  Dolwin.vcproj  Dolwin.vcxproj  Dolwin.vcxproj.filters  DolwinEmuForPlayground.ipdb  DolwinPlayground.iobj  DolwinPlayground.ipdb  DolwinPlayground_VS2015.sln  DolwinPlayground_VS2019.sln  DolwinPlayground_VS2022.sln  DolwinVS2019.sln  Dolwin_Cleanup.bat  Dolwin_Quick_Start.md  Dolwin_VS2015.sln  Dolwin_VS2019.sln  Dolwin_VS2022.sln  Doxyfile  IPL_Reversing.md  ProjectHome.md  README.md  VCNET_Remove_All.bat  luigi.json  out.txt
.github/ISSUE_TEMPLATE/: feature_request.md
DVD/: DVD.dsp  DVD.vcproj  DVD.vcxproj  DVD.vcxproj.filters  Readme.md
DVD/RES/: DVD.rc  resource.h
DVD/SRC/: Configure.cpp  DVD.cpp  DVD.h  GCM.cpp  GCM.h  filesystem.cpp  filesystem.h  pch.h
Data/: .gitignore  DduJdi.json  DebuggerJdi.json  DefaultSettings.json  DolphinSdkDvdData.json  DspJdi.json  EmuJdi.json  G3SED8.map  G4SE52.map  Games.ini  GekkoCoreJdi.json  HLEJdi.json  HWJdi.json  default.cmd  default.s  test.cmd
Data/Json/: DduJdi.json  DebuggerJdi.json  DolphinSdkDvdData.json  DolwinVideoJdi.json  DspJdi.json  EmuJdi.json  GXJdi.json  GekkoCoreJdi.json  HLEJdi.json  HWJdi.json  Readme.md  UIJdi.json
Docs/: Dolwin_Quick_Start.md
Docs/CmdScripts/: BamDspCanaries.cmd  BreakOnDspStub.cmd  DspIplNtsc10Breaks.cmd  IplUcode.cmd  Readme.md
Docs/EMU/: AIStrats.md  DolwinArchitecture.graphml  DolwinGraphicsFlow.graphml  EventLog.md  EventLogFlow.graphml  GekkoCore.graphml  Jitc.md  JitcNotes.md  JsonDebugInterface.md  JsonDebugInterfaceRus.md  ReleaseNotes011.md  ReleaseNotes011Rus.md  ReleaseNotes012.md  ReleaseNotes012Rus.md  ReleaseNotes0130.md  ReleaseNotes0130Rus.md  SamplingProfiler.md  SamplingProfilerRus.md  TODO.docx  changes.txt  old_style.txt  old_todo.txt  stage1.odt  stage1_diag.graphml  style.txt  todo.txt
Docs/GCDev/: AMCSTUB.c  AMCSTUB.h  GCDEV.txt
Docs/HW/: AudioInterface.md  DiskInterface.md  DspMailbox.graphml  GX.md  MX96037_Multiplier.md  Memory.txt  PLL_CFG.txt  ProcessorInteface.md  ProcessorInterface.md  SPR.txt  acronyms.txt  ais.htm  dsp_info.md  dsp_info.txt  fifo.txt  mi.txt  opcodes.txt  ps.txt  si.htm  vi.htm  yagcd_changelog.txt  yagcd_missing.txt
Docs/Logs/: .gitattributes  Debug_DSP_IPL_JAudio_Run001.htm  Debug_DSP_MicrocodeRun_FirstTry.html  smp-onetri-profiler.json
Docs/RE/: Apploader.txt  Bootrom.txt  CardUnlock.txt  DVDConvertPathToEntrynum.graphml  DVDConvertPathToEntrynum.json  DVDConvertPathToEntrynum.md  DVDConvertPathToEntrynum_Plain.graphml  DVDLow.c  DVDLow.h  Descrambler.c  DvdAdpcmDecode.md  FSTNotes.md  GXInit.c  GXPrivate.h  GXTexture.c  OS.c  OSAlloc.c  OSArena.c  OSCache.c  OSSync.c  __div2i.txt  __ppc_eabi_init.c  __start.c  ar.txt  axout.txt  boot.s  boot_ntsc.idb  boot_pal.idb  bs2.txt  context.txt  dsp.txt  dsp_task.txt  dspirom_disa.txt  dvdfs.txt  dvdopen.txt  eth.txt  exi.c  games.txt  gxfifo.txt  gxstruct.txt  (+12 more)
Docs/WEB/: Dolwin.url  MotorolaManuals.txt  gc-all-games-list.txt
DolwinNew/: DolwinNew.sln  DolwinNew.vcxproj  DolwinNew.vcxproj.filters
DolwinVideo/: DolwinVideo.vcxproj  DolwinVideo.vcxproj.filters  Fifo.cpp  Fifo.h  GLX.DSW  GLX.RC  GPRegs.cpp  Gl.cpp  Glx.def  Gpl.cpp  Light.cpp  Plug.cpp  Plug.h  Readme.md  Stages.h  Tex.cpp  Tex.h  XF.CPP  XF.H
DolwinVideo/SRC/: Fifo.cpp  Fifo.h  GPRegs.cpp  GPRegs.h  Gl.cpp  Gpl.cpp  Gpl.h  Gx.h  Light.h  Perf.cpp  Perf.h  Plug.cpp  Plug.h  Stages.cpp  Stages.h  Tev.h  Tex.cpp  (+3 more)
GCMCMPR/: GCMCMPR.vcproj  GCMCMPR.vcxproj  GCMCMPR.vcxproj.filters
HtmlHelp/: HtmlHelp.h
PAD/: PAD.dsp  PAD.vcxproj  PAD.vcxproj.filters  Readme.md  Readme.txt
RES/: Dolwin.manifest  Dolwin.rc  SjisTable.h  nobanner.h  resource.h
RnD/: .gitignore  Readme.md
RnD/ThreadDemo/: .gitignore  CMakeLists.txt  Readme.md  ThreadDemo.cpp  ThreadDemo.sln  ThreadDemo.vcxproj  ThreadDemo.vcxproj.filters  pch.h
SRC/: EmuCommands.cpp  EmuCommands.h  Emulator.cpp  Emulator.h  Loader.cpp  Loader.h  dolphin.h
SRC/DSP/Scripts/: CMakeLists.txt  DSP.vcxproj  DSP.vcxproj.filters
SRC/DSP/Scripts/VS2015/: DSP.vcxproj  DSP.vcxproj.filters
SRC/DSP/Scripts/VS2019/: DSP.vcxproj  DSP.vcxproj.filters
SRC/DSP/Scripts/VS2022/: DSP.vcxproj
SRC/GekkoCore/Scripts/: CMakeLists.txt
SRC/GekkoCore/Scripts/VS2015/: GekkoCore.vcxproj  GekkoCore.vcxproj.filters
SRC/GekkoCore/Scripts/VS2019/: GekkoCore.vcxproj  GekkoCore.vcxproj.filters
SRC/GekkoCore/Scripts/VS2022/: GekkoCore.vcxproj  GekkoCore.vcxproj.filters
SRC/Hardware/Scripts/: CMakeLists.txt  GCNHardware.vcxproj  GCNHardware.vcxproj.filters
SRC/Hardware/Scripts/VS2015/: GCNHardware.vcxproj  GCNHardware.vcxproj.filters  GCNHardwareForPlayground.vcxproj
SRC/Hardware/Scripts/VS2019/: GCNHardware.vcxproj  GCNHardware.vcxproj.filters  GCNHardwareForPlayground.vcxproj
SRC/Hardware/Scripts/VS2022/: GCNHardwareForPlayground.vcxproj
SRC/UI/Playground/Scripts/: CMakeLists.txt
SRC/UI/Playground/Scripts/VS2015/: DolwinPlayground.vcxproj  DolwinPlayground.vcxproj.filters
SRC/UI/Playground/Scripts/VS2019/: DolwinPlayground.vcxproj  DolwinPlayground.vcxproj.filters
SRC/UI/Playground/Scripts/VS2022/: DolwinPlayground.vcxproj
SRC_Old/DSP/Scripts/: CMakeLists.txt
SRC_Old/DSP/Scripts/VS2022/: DSP.vcxproj.filters
Source/: Readme.txt  dolphin.h
ZLIB/: zlibstat.lib
scripts/: pureikyubu.sln  pureikyubu.vcxproj  pureikyubu.vcxproj.filters
src/: ai.cpp  ai.h  audio.cpp  audio.h  audionull.cpp  audiosdl.cpp  audiosdl.h  bootrtc.cpp  bootrtc.h  bump.cpp  bump.h  config.cpp  config.h  cp.cpp  cp.h  cui.cpp  cui.h  cui_imgui.cpp  cuinull.cpp  cuisdl.cpp  debug.cpp  debug.h  debugui.cpp  debugui.h  debuguisimple.cpp  di.cpp  di.h  dsp.cpp  dsp.h  dspai.cpp  dspai.h  dsparam.cpp  dsparam.h  dspcore.cpp  dspcore.h  dspdebug.cpp  dspdec.cpp  dspdec.h  dspdisasm.cpp  dspdma.cpp  (+73 more)
trunk/: Dolwin.dsp  Dolwin.dsw  Dolwin.sln  Dolwin.vcproj  mojo
wiki/: Bootstrap_Reversing.wiki  IPL_Reversing.wiki  Readme.md  debugui.md  flipper.md  gekko.md  gfx.md  main.md
(+1481 files in other folders)
